* Fix draw key incorrectly working in binoculars / lasersight mode.
* Fix pathfinding problems for first initialized enemy of every slot.
* Fix Flame Emitter 3 not burning player.
* Fix TR3 Tribeman with axe not attacking Lara.
* Fix TR3 Tribeman with dart not shooting at Lara's direction.
* Fix crash, water death and meshswap issues for TR5 cyborg.
* Fix Lara's animation for cog switch release
* Added new OCB to cog switch object: 
	- Use OCB 0 to have the traditional behaviour.
	- Use any other OCB to can use the Cog Switch without need of any door linked.
* Allow to freely rotate dart emitter in all directions.
* Customize dart emitter damage with OCB. Negative number will additionally poison Lara.
* Draw real mesh for darts.

Lua API changes:
* Add new Room class and several methods for it.

Version 1.0.4
=============

* Add generic assignable effects for moveables - fire, sparks, smoke and laser / electric ignite.
* Add ability to burn enemies with FLAME_EMITTER_1 and death blocks.
* Add wireframe mode and other visual debug information (switch by F10/F11 debug page scroll hotkeys).
* Activate Lara-bound volume triggers with mounted vehicles.
* Allow multiple individual activators for the same volume at the same time.
* Remove TRC remnant which added HK to inventory if pistols weren't available.
* Change default shatter sound to TR4_SMASH_ROCK (tomb4 default).
* Reduce idle pose time from 30 to 20 seconds.
* Automatically align pickups to floor surface.
* Minecart enhancements:
    - Add landing / jump sound.
    - Add falldamage.
    - Explode in water below 2 click surface.
    - Fix jump.
* Templar Knight enhancements:
    - Restored spark effects.
    - Can destroy statics in shatter slots.
	- Fix crash when attacking.
* SAS enhancements:
    - Fix grenade shooting.
    - Fix AI_MODIFY and AI_GUARD behaviour.
* Fix choppy camera movement in several cases.
* Fix Lara's vertical position when shimmying around steep slope corners.